<?xml version="1.0"?>
<package format="2">
  <name>rosidl_typesupport_freertps_cpp</name>
  <version>0.0.0</version>
  <description>Generate the C++ interfaces for FreeRTPS.</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>libfreertps</build_depend>
  <build_export_depend>libfreertps</build_export_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_depend>rosidl_generator_cpp</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_cpp</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_dds_idl</buildtool_export_depend>

  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
